tests/error/template_overload.gw
#! [contains] must overload template function with template
fun void test<[A](int i){}
fun void test(int i, float f){}
